Set up Spotless formatting with Palantir Java Format (#12)
* Set up Spotless formatting with Palantir Java Format

- Added spotless-maven-plugin (v2.43.0) to pom.xml
- Configured plugin with palantirJavaFormat and removeUnusedImports
- Added spotless:check step to CI pipeline before build
- Applied formatting to all 66 Java files in the codebase
- All tests passing (62 tests, 0 failures)

Resolves #11

* Update spotless-maven-plugin to version 3.1.0

- Updated plugin version from 2.43.0 to 3.1.0 (latest)
- Applied formatting which improved record parameter readability
- 4 files reformatted (StatusInfo and StatusList records)
- All 62 tests passing
- spotless:check confirms all files properly formatted

* modified the files

* added some modifications

* Fixed the build error